REMDEV-14348: Version 1.3.2 wie am 25.02.2022 auf Test deployed.
