# lib/SwisseldexAumImmo/models/upload_message_extension_previous_person.rb
@@ -3,7 +3,7 @@
 
 #No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
 
-OpenAPI spec version: 1.3.2-alpha
+OpenAPI spec version: 1.3.2
 
 Generated by: https://github.com/swagger-api/swagger-codegen.git
 Swagger Codegen version: 3.0.33
@@ -24,17 +24,13 @@ module SwisseldexAumImmo
     # 1 = Male, 2 = Female, 3 = Undefined
     attr_accessor :sex
 
-    # ISO 2 format
-    attr_accessor :nationality_iso2
-
     # Attribute mapping from ruby-style variable name to JSON key.
     def self.attribute_map
       {
         :'official_name' => :'officialName',
         :'call_name' => :'callName',
         :'date_of_birth' => :'dateOfBirth',
-        :'sex' => :'sex',
-        :'nationality_iso2' => :'nationalityISO2'
+        :'sex' => :'sex'
       }
     end
 
@@ -44,8 +40,7 @@ module SwisseldexAumImmo
         :'official_name' => :'Object',
         :'call_name' => :'Object',
         :'date_of_birth' => :'Object',
-        :'sex' => :'Object',
-        :'nationality_iso2' => :'Object'
+        :'sex' => :'Object'
       }
     end
 
@@ -85,10 +80,6 @@ module SwisseldexAumImmo
       if attributes.key?(:'sex')
         self.sex = attributes[:'sex']
       end
-
-      if attributes.key?(:'nationality_iso2')
-        self.nationality_iso2 = attributes[:'nationality_iso2']
-      end
     end
 
     # Show invalid properties with the reasons. Usually used together with valid?
@@ -117,8 +108,7 @@ module SwisseldexAumImmo
           official_name == o.official_name &&
           call_name == o.call_name &&
           date_of_birth == o.date_of_birth &&
-          sex == o.sex &&
-          nationality_iso2 == o.nationality_iso2
+          sex == o.sex
     end
 
     # @see the `==` method
@@ -130,7 +120,7 @@ module SwisseldexAumImmo
     # Calculates hash code according to all attributes.
     # @return [Integer] Hash code
     def hash
-      [official_name, call_name, date_of_birth, sex, nationality_iso2].hash
+      [official_name, call_name, date_of_birth, sex].hash
     end
 
     # Builds the object from hash
